...
    android:id="@+id/page_refresh_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/paper_color">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/page_contents_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <org.wikipedia.views.ObservableWebView
                android:id="@+id/page_web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

            <org.wikipedia.page.leadimages.PageHeaderView
                android:id="@+id/page_header_view"
...
