...

    <!-- Page toolbar menu -->
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in page</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_view_notes">View notes</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_saved">Saved</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>

...
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_share">Share</string>
    <string name="menu_text_select_define">Define</string>
    <string name="menu_text_select_hear">Hear</string>
    <string name="menu_text_select_translate">Translate</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="menu_text_select_notes">Save note</string>

    <!-- Nearby -->
    <string name="nav_item_nearby">Nearby</string>
    <string name="nearby_zoom_to_location">Zoom to a location on the map</string>
    <string name="nearby_osm_license"><![CDATA[&copy; &nbsp;<a href=\"https://www.openstreetmap.org/copyright/\">OpenStreetMap</a> contributors]]></string>

...
    <string name="view_categories_card_title">Categories</string>
    <string name="view_categories_card_subtitle">Browse articles by category</string>
    <string name="view_categories_card_action">View categories</string>
    <string name="view_random_card_title">Discover</string>
    <string name="view_random_card_subtitle">Flip through articles to read from Wikipedia.</string>
    <string name="view_random_card_action">Swipe away</string>
    <string name="view_next_random_article">Load another article</string>
    <string name="view_main_page_card_title">Today on Wikipedia</string>
    <string name="view_main_page_card_subtitle">Main page on %s</string>
    <string name="view_main_page_card_action">View main page</string>
    <string name="view_featured_image_card_title">Picture of the day</string>
    <string name="view_featured_image_card_download">Download</string>
    <string name="menu_feed_card_dismiss">Hide this card</string>
    <string name="menu_feed_card_dismissed">Card hidden.</string>
    <string name="menu_feed_card_edit_card_languages">Edit card languages</string>
    <string name="menu_feed_overflow_label">More options</string>

    <string name="feed_featured_image_share_subject">Featured image from Wikimedia Commons</string>
    <string name="feed">Explore</string>
    <string name="most_read_list_card_title">Trending</string>
    <string name="view_static_card_icon_content_description">Card icon</string>
    <string name="view_card_news_title">In the news</string>
...
